--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "project-02"]
-	path = project-02
-	url = https://github.com/cs-audit/project-02
+[submodule "sub-project"]
+	path = sub-project
+	url = https://github.com/xuantuyen25/x
