--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "sub-project"]
 	path = sub-project
 	url = https://github.com/xuantuyen25/x
+
+
+[submodule "sub-project-02"]
+	path = sub-project-02
+	url = https://github.com/cs-audit/project-02
